<resources>
    <string name="app_name">MyCalculator</string>
    <string name="_0123">0123</string>
    <string name="secondnd_button">+/-</string>
    <string name="modulu">%</string>
    <string name="dividde">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0"> 0</string>

    <string name="__">=</string>
    <string name="lkj">.</string>
</resources>