<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="15dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/upper_textviews"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:gravity="bottom"
            android:orientation="vertical"

            >


            <TextView
                android:id="@+id/output_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="end"
                android:text="@string/_0123"
                android:textColor="@color/white"
                android:textSize="60sp" />


        </LinearLayout>

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.9"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"


                    android:layout_margin="5dp"
                    android:backgroundTint="@color/grey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="AC"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"

                    android:layout_margin="5dp"
                    android:backgroundTint="@color/grey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/secondnd_button"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="60dp"

                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/grey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/modulu"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/orange"

                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/dividde"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp" />


            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"

                    android:backgroundTint="@color/grey"

                    android:layout_margin="5dp"

                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_7"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"

                    android:layout_margin="5dp"
                    android:backgroundTint="@color/darkgrey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_8"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"

                    android:layout_margin="5dp"
                    android:backgroundTint="@color/darkgrey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_9"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"

                    android:layout_margin="5dp"
                    android:backgroundTint="@color/orange"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="X"
                    android:textSize="23sp" />


            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"

                    android:layout_margin="5dp"
                    android:backgroundTint="@color/darkgrey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_4"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"

                    android:layout_margin="5dp"
                    android:backgroundTint="@color/darkgrey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_5"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"

                    android:layout_margin="5dp"
                    android:backgroundTint="@color/darkgrey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_6"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"

                    android:layout_margin="5dp"
                    android:backgroundTint="@color/orange"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="-"
                    android:textAlignment="center"
                    android:textSize="40sp" />


            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:layout_width="60dp"

                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/darkgrey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"

                    android:insetBottom="0dp"
                    android:text="@string/_1"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="60dp"

                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/darkgrey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_2"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="60dp"

                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/darkgrey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_3"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"

                    android:layout_margin="5dp"
                    android:backgroundTint="@color/orange"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="+"
                    android:textAlignment="center"
                    android:textSize="30sp" />


            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:layout_span="2"
                    android:backgroundTint="@color/darkgrey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_0"
                    android:textAlignment="textStart"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="60dp"
                    android:layout_height="80dp"

                    android:layout_margin="5dp"
                    android:backgroundTint="@color/darkgrey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/lkj"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="60dp"

                    android:layout_height="80dp"

                    android:layout_margin="5dp"
                    android:backgroundTint="@color/orange"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/__"
                    android:textSize="30sp" />


            </TableRow>
        </TableLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>